# chipbit

./: CMakeLists.txt
assets/: ant.c8a  chip8da  emutest.c8a  invaders.c8a  vbrix.c8a
assets/shaders/: chip8.frag.glsl  chip8.vert.glsl
src/: Chipbit.cpp  Chipbit.h  main.cpp
src/compiler/: Compiler.cpp  Compiler.h
src/core/: Actions.h  EventManager.h  Input.cpp  Input.h  Log.h  Utils.cpp  Utils.h  Window.cpp  Window.h
src/core/events/: Events.h
src/cpu/: Chip8.cpp  Chip8.h
src/gui/: Gui.cpp  Gui.h
src/gui/widgets/: CodeEditor.cpp  CodeEditor.h  Main.cpp  Main.h  MemoryView.cpp  MemoryView.h  RegisterView.cpp  RegisterView.h  StackView.cpp  StackView.h  Widget.h  Widgets.h
src/loaders/: RomLoader.cpp  RomLoader.h  ShaderLoader.cpp  ShaderLoader.h
src/renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UniformType.h
